--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,30 +1,29 @@
 html,
 body {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 
-    color: var(--black);
-    font-family: var(--font-family);
-    background: #F5F6F8;
+  color: var(--black);
+  font-family: var(--font-family);
+  background: #f5f6f8;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 
-    color: inherit;
+  color: inherit;
 }
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-
 :root {
-    --black: #3B434E;
-    --white: #FFF;
-    --primary: #7653FC;
-    --red: #FC836D;
-    --green: #1DC37E;
-    --greenLight: #C8F8E4;
-    --font-family: 'Noto Sans', sans-serif;
+  --black: #3b434e;
+  --white: #fff;
+  --primary: #7653fc;
+  --red: #fc836d;
+  --green: #1dc37e;
+  --greenLight: #c8f8e4;
+  --font-family: "Noto Sans", sans-serif;
 }
