--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,6 +25,8 @@ a {
   --primary: #7653fc;
   --primaryHover: #6344df;
   --red: #fc836d;
+  --redDark: #DE0000;
+  --darkGray: #B3C0D9;
   --green: #1dc37e;
   --greenLight: #c8f8e4;
   --font-family: "Noto Sans", sans-serif;
